增加jetty、assembly的案例